Update package.json: Add author

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-burger",
   "version": "0.1.0",
   "private": true,
+  "author":  "chidang <dangtanminhchi@gmail.com>",
   "dependencies": {
     "@babel/core": "7.9.0",
     "@svgr/webpack": "4.3.3",
